gccida/g0/gen_add_mult
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add_mult/src/loop.c:8096:43: error: use of undeclared identifier 'machine_mode'
result = expand_mult_add( b, reg, m, a, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add_mult/src/obj/loop.o] Error 1
